# zephy_communication

./: CMakeLists.txt  Kconfig  prj.conf
boards/: stm32l562e_dk.conf
src/: CMakeLists.txt
src/controller/: controller.cpp  pid.h
src/controller copy/: controller.cpp
src/spi/: transceive_master.cpp  transceive_master_double.cpp  transceive_slave.cpp  transceive_slave_double.cpp
src/spi_interrupt/: spi_slave_interrupt.cpp
src/stm32_hal_comm/: CMakeLists.txt
src/stm32_hal_comm/uart_dma_send/include/: hal_functions.h
src/stm32_hal_comm/uart_dma_send/src/: uart_hal.cpp
src/stm32_hal_comm/uart_polling_send/: CMakeLists.txt
src/uart/: console_char_read.cpp  console_interrupt.cpp  console_line_read.cpp  uart_hal.cpp  uart_send.cpp
